--- a/content/network/src/main/assets/network-entry-details.html
+++ b/content/network/src/main/assets/network-entry-details.html
@@ -4,22 +4,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>network entry</title>
         <style>
-            @font-face {
-                font-family: 'courier';
-                src: url('file:///android_res/font/courier_regular.ttf') format('truetype');
-            }
-            @font-face {
-                font-family: 'courier-bold';
-                src: url('file:///android_res/font/courier_bold.ttf') format('truetype');
-            }
-            @font-face {
-                font-family: 'lato';
-                src: url('file:///android_res/font/courier_bold.ttf') format('truetype');
-            }
-
             body {
                 color: BBtextColor;
-                font-family: 'lato';
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
                 margin: 0px;
                 background-color: BBbackgroundColor;
             }
@@ -46,7 +33,6 @@
             }
 
             .container h1 {
-                font-family: 'lato';
                 padding: 0px;
                 margin: 0px;
                 font-size: 15px;
@@ -57,7 +43,7 @@
                 margin: 0px;
                 white-space: nowrap;
                 overflow-x: auto;
-                font-family: 'courier';
+                font-family: 'Courier New', Courier, monospace;
             }
         </style>
     </head>
