--- a/content/network/src/main/assets/network-entry-details.html
+++ b/content/network/src/main/assets/network-entry-details.html
@@ -23,6 +23,7 @@
                 display: flex;
                 padding: 10px;
                 font-size: 15px; 
+                align-items: center;
                 background-color: BBbackgroundTertiaryColor;
                 border-top-left-radius: 16px;
                 border-top-right-radius: 16px;
@@ -36,6 +37,26 @@
                 padding: 0px;
                 margin: 0px;
                 font-size: 15px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+            }
+
+            .container h1 .action-buttons {
+                flex: 1;
+                display: flex;
+                justify-content: end;
+                margin: 0px -5px;
+            }
+
+            .action-buttons svg {
+                padding: 5px 5px;
+                border-radius: 100%;
+                transition: all .3s ease-in-out;
+            }
+
+            .action-buttons svg:hover {
+                background-color: BBbackgroundTertiaryColor;
             }
 
             .container p {
@@ -50,29 +71,69 @@
     <body>
         <div class="container">
             <div class="head">
-                REQUEST
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextColor">
+                    <path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/>
+                </svg>
+                &nbsp;REQUEST
             </div>
             <div class="content">
-                <h1>Headers</h1>
-                <p>%request_headers%</p>
+                <h1>
+                    Headers
+                    <div class="action-buttons">
+                        <svg onclick="javascript: NativeAndroid.copyToClipboard(document.getElementById('request-header').innerText);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/>
+                        </svg>
+                    </div>
+                </h1>
+                <p id="request-header">%request_headers%</p>
             </div>
             <div class="content">
-                <h1>Body</h1>
-                <p>%request_body%</p>
+                <h1>
+                    Body
+                    <div class="action-buttons">
+                        <svg onclick="javascript: NativeAndroid.openJson(document.getElementById('request-body').innerHTML);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/>
+                        </svg>
+                        <svg onclick="javascript: NativeAndroid.copyToClipboard(document.getElementById('request-body').innerHTML);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/>
+                        </svg>
+                    </div>
+                </h1>
+                <p id="request-body">%request_body%</p>
             </div>
         </div>
         <br/>
         <div class="container">
             <div class="head">
-                RESPONSE
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextColor">
+                    <path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/>
+                </svg>
+                &nbsp;RESPONSE
             </div>
             <div class="content">
-                <h1>Headers</h1>
-                <p>%response_headers%</p>
+                <h1>
+                    Headers
+                    <div class="action-buttons">
+                        <svg onclick="javascript: NativeAndroid.copyToClipboard(document.getElementById('response-header').innerText);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/>
+                        </svg>
+                    </div>
+                </h1>
+                <p id="response-header">%response_headers%</p>
             </div>
             <div class="content">
-                <h1>Body</h1>
-                <p>%response_body%</p>
+                <h1>
+                    Body
+                    <div class="action-buttons">
+                        <svg onclick="javascript: NativeAndroid.openJson(document.getElementById('response-body').innerHTML);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/>
+                        </svg>
+                        <svg onclick="javascript: NativeAndroid.copyToClipboard(document.getElementById('response-body').innerHTML);" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="BBtextLinkColor">
+                            <path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/>
+                        </svg>
+                    </div>
+                </h1>
+                <p id="response-body">%response_body%</p>
             </div>
         </div>
     </body>
