--- a/content/network/src/main/assets/network-entry-details.html
+++ b/content/network/src/main/assets/network-entry-details.html
@@ -7,7 +7,7 @@
             body {
                 color: BBtextColor;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
-                margin: 0px;
+                margin: 0px 0px 100px 0px;
                 background-color: BBbackgroundColor;
             }
 
